search bar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,20 @@ body{
     line-height: 1.5;
     margin: auto;
 }
+.add-input{
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: auto;
+}
 
 /* when class aded from (script.js) the element targeted will be removed */
 .filtered{       
-    display: none; 
+    display: none!important; 
   }
 
 
